<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/transparent_color_setting"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/bottom_select_image_image_view"
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bottom_select_image_color_red_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:text="@string/red" />

            <Button
                android:id="@+id/bottom_select_image_color_blue_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:text="@string/blue" />

            <Button
                android:id="@+id/bottom_select_image_color_green_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:text="@string/green" />

            <Button
                android:id="@+id/bottom_select_image_color_white_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:text="@string/white" />

            <Button
                android:id="@+id/bottom_select_image_color_black_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:text="@string/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_color_code" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bottom_select_image_color_textinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/color_code"
                android:text="#ffffff" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bottom_select_image_ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

</LinearLayout>