<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/layer_list"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bottom_layer_size_change_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:text="@string/select_magnification" />

        <Button
            android:id="@+id/bottom_layer_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:text="@string/add_layer" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bottom_layer_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>